# spec.ai

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml  specai.example.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: audit.rs  circuit_breaker.rs  config.rs  engine.rs  lib.rs  similarity.rs  types.rs
crates/core/src/cache/: eviction.rs  mod.rs
crates/core/src/embedder/: cached.rs  guarded.rs  http.rs  mod.rs
crates/core/src/reranker/: mod.rs  text_relevance.rs
crates/core/src/retriever/: guarded.rs  mod.rs  vectorsdb.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: auth.rs  docs.rs  errors.rs  handlers.rs  metrics.rs  mod.rs  models.rs  validation.rs  ws.rs
crates/server/tests/: integration.rs
examples/: README.md
examples/js/: client.js  package.json
examples/python/: client.py
