[workspace]
members = ["crates/core", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }

[profile.release]
lto = "fat"
codegen-units = 1
