[package]
name = "specai-core"
version.workspace = true
edition.workspace = true
description = "Core speculative retrieval engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
